--- a/metabci/braingui/Ui_Form/Processing/preprocess/data_cut.ui
+++ b/metabci/braingui/Ui_Form/Processing/preprocess/data_cut.ui
@@ -88,6 +88,12 @@
           <property name="text">
            <string>Mark：1</string>
           </property>
+          <property name="checkable">
+           <bool>true</bool>
+          </property>
+          <property name="checked">
+           <bool>false</bool>
+          </property>
          </widget>
         </item>
         <item row="1" column="1">
@@ -96,6 +102,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -108,6 +117,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -133,6 +145,9 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -145,20 +160,23 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
         <item row="3" column="0">
-         <widget class="QCheckBox" name="checkBox_4">
+         <widget class="QCheckBox" name="checkBox_3">
           <property name="font">
            <font>
             <pointsize>15</pointsize>
            </font>
           </property>
           <property name="text">
-           <string>Mzrk：3</string>
+           <string>Mark：3</string>
           </property>
          </widget>
         </item>
@@ -168,6 +186,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -181,13 +202,16 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
         <item row="4" column="0">
-         <widget class="QCheckBox" name="checkBox_3">
+         <widget class="QCheckBox" name="checkBox_4">
           <property name="font">
            <font>
             <pointsize>15</pointsize>
@@ -205,6 +229,9 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -216,6 +243,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -241,6 +271,9 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -252,6 +285,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -277,6 +313,9 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -288,6 +327,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -341,6 +383,9 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -352,6 +397,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -405,6 +453,9 @@
             <pointsize>15</pointsize>
            </font>
           </property>
+          <property name="text">
+           <string>0</string>
+          </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
@@ -416,6 +467,9 @@
            <font>
             <pointsize>15</pointsize>
            </font>
+          </property>
+          <property name="text">
+           <string>0</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
